logic transferred to java and migrate to java 8